--- a/AccountingOfEquipmentInventoryManagementApp/Views/Windows/ManagerWindow.xaml
+++ b/AccountingOfEquipmentInventoryManagementApp/Views/Windows/ManagerWindow.xaml
@@ -94,7 +94,7 @@
                 <TextBox x:Name="tbCategoryFilter" Width="120" Margin="5,0,10,0"/>
                 <Button x:Name="btnGenerateReport" Content="Сформировать отчет" Width="140" 
                 Click="btnGenerateReport_Click" Margin="0,0,10,0"/>
-                <Button x:Name="btnExportCsv" Content="Экспорт в CSV" Width="120" 
+                <Button x:Name="btnExportCsv" Content="Экспорт" Width="120" 
                 Click="btnExportCsv_Click"/>
             </StackPanel>
         </GroupBox>
@@ -107,7 +107,7 @@
                 <DataGridTextColumn Header="Серийный номер" Binding="{Binding SerialNumber}" Width="150"/>
                 <DataGridTextColumn Header="Статус" Binding="{Binding Status}" Width="100"/>
                 <DataGridTextColumn Header="Категория" Binding="{Binding Category.Name}" Width="150"/>
-                <DataGridTextColumn Header="Дата покупки" Binding="{Binding PurchaseDate, StringFormat=\{0:yyyy-MM-dd\}}" Width="150"/>
+                <DataGridTextColumn Header="Дата покупки" Binding="{Binding PurchaseDate, StringFormat=\{0:dd.MM.yyyy\}}" Width="150"/>
                 <DataGridTextColumn Header="Местоположение" Binding="{Binding Location}" Width="150"/>
             </DataGrid.Columns>
         </DataGrid>
