--- a/AccountingOfEquipmentInventoryManagementApp/Views/Windows/ManagerWindow.xaml
+++ b/AccountingOfEquipmentInventoryManagementApp/Views/Windows/ManagerWindow.xaml
@@ -13,7 +13,7 @@
             <!-- 4. DataGrid для отображения оборудования -->
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-
+        
         <!-- 1. Группа для создания новой категории оборудования -->
         <GroupBox Header="Добавление новой категории оборудования" Grid.Row="0" Margin="0,0,0,10">
             <StackPanel Orientation="Horizontal" Margin="10">
@@ -22,7 +22,6 @@
                 <Button x:Name="btnAddCategory" Content="Создать категорию" Width="160" Margin="5" Click="btnAddCategory_Click"/>
             </StackPanel>
         </GroupBox>
-
         <!-- 2. Группа для добавления нового оборудования -->
         <GroupBox Header="Добавить оборудование" Grid.Row="1" Margin="0,0,0,10">
             <Grid>
@@ -78,11 +77,29 @@
                 <Button x:Name="btnSelectImage" Grid.Row="5" Grid.Column="1" Content="Выбрать изображение" Margin="5" Click="btnSelectImage_Click"/>
 
                 <!-- Ряд 6: Кнопка добавления оборудования -->
-                <Button Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="4" Content="Добавить оборудование" Margin="10" HorizontalAlignment="Center"
-                Click="btnAddEquipment_Click"/>
-            </Grid>
-        </GroupBox>
+                <Grid Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="4" Margin="5">
+                    <Grid.ColumnDefinitions>
+                        <!-- Первый столбец занимает оставшееся пространство -->
+                        <ColumnDefinition Width="*" />
+                        <!-- Второй столбец для правой группы кнопок -->
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
 
+                    <!-- Кнопка "Добавить оборудование", расположенная слева (или можно задать center) -->
+                    <Button Content="Добавить оборудование" Margin="5" HorizontalAlignment="Left" Click="btnAddEquipment_Click" Grid.Column="0"/>
+
+                    <!-- Контейнер для кнопок "Удалить" и "Изменить", выровненный по правому краю -->
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Grid.Column="1">
+                        <Button Content="Удалить оборудование" Margin="5" Click="btnDeleteEquipment_Click"/>
+                    </StackPanel>
+                </Grid>
+
+
+            </Grid>
+            
+        </GroupBox>
+        
+        
         <!-- 3. Группа для формирования отчёта по оборудованию -->
         <GroupBox Header="Отчет по оборудованию" Grid.Row="2" Margin="0,0,0,10">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10">
@@ -91,14 +108,14 @@
                 <Label Content="Конечная дата:" VerticalAlignment="Center"/>
                 <DatePicker x:Name="dpEndDate" Width="120" Margin="5,0,10,0"/>
                 <Label Content="Категория:" VerticalAlignment="Center"/>
-                <TextBox x:Name="tbCategoryFilter" Width="120" Margin="5,0,10,0"/>
+                <ComboBox x:Name="cbCategoryFilter" Width="120" Margin="5,0,10,0" DisplayMemberPath="Name"/>
                 <Button x:Name="btnGenerateReport" Content="Сформировать отчет" Width="140" 
                 Click="btnGenerateReport_Click" Margin="0,0,10,0"/>
                 <Button x:Name="btnExportCsv" Content="Экспорт" Width="120" 
                 Click="btnExportCsv_Click"/>
             </StackPanel>
         </GroupBox>
-
+        
         <!-- 4. DataGrid для отображения списка оборудования -->
         <DataGrid x:Name="ReportDataGrid" Grid.Row="3" AutoGenerateColumns="False">
             <DataGrid.Columns>
