--- a/AccountingOfEquipmentInventoryManagementApp/App.xaml
+++ b/AccountingOfEquipmentInventoryManagementApp/App.xaml
@@ -3,6 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="Views/Windows/LoginWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Assets/Styles/AppColors.xaml"   />
+                <ResourceDictionary Source="Assets/Styles/ModuleStyles.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
