--- a/AccountingOfEquipmentInventoryManagementApp/Views/Windows/ManagerWindow.xaml
+++ b/AccountingOfEquipmentInventoryManagementApp/Views/Windows/ManagerWindow.xaml
@@ -1,28 +1,32 @@
 ﻿<Window x:Class="AccountingOfEquipmentInventoryManagementApp.Views.Windows.ManagerWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:local="clr-namespace:AccountingOfEquipmentInventoryManagementApp.ViewModels"
         Title="Менеджер - Управление оборудованием" Height="750" Width="1100">
+
+    <Window.DataContext>
+        <local:ManagerViewModel />
+        <!-- Убедитесь, что xmlns:local указывает на пространство имён, где лежит ManagerViewModel -->
+    </Window.DataContext>
+
     <Grid Margin="10">
         <Grid.RowDefinitions>
-            <!-- 1. Группа для создания новой категории -->
             <RowDefinition Height="Auto" />
-            <!-- 2. Группа для добавления нового оборудования -->
             <RowDefinition Height="Auto" />
-            <!-- 3. Группа для формирования отчёта -->
             <RowDefinition Height="Auto" />
-            <!-- 4. DataGrid для отображения оборудования -->
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        
-        <!-- 1. Группа для создания новой категории оборудования -->
+
+        <!-- 1. Добавление новой категории оборудования -->
         <GroupBox Header="Добавление новой категории оборудования" Grid.Row="0" Margin="0,0,0,10">
             <StackPanel Orientation="Horizontal" Margin="10">
                 <Label Content="Название категории:" VerticalAlignment="Center" Margin="5"/>
-                <TextBox x:Name="tbNewCategoryName" Width="200" Margin="5"/>
-                <Button x:Name="btnAddCategory" Content="Создать категорию" Width="160" Margin="5" Click="btnAddCategory_Click"/>
+                <TextBox Text="{Binding NewCategoryName, UpdateSourceTrigger=PropertyChanged}" Width="200" Margin="5"/>
+                <Button Content="Создать категорию" Width="160" Margin="5" Command="{Binding AddCategoryCommand}"/>
             </StackPanel>
         </GroupBox>
-        <!-- 2. Группа для добавления нового оборудования -->
+
+        <!-- 2. Добавить оборудование -->
         <GroupBox Header="Добавить оборудование" Grid.Row="1" Margin="0,0,0,10">
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -32,92 +36,77 @@
                     <ColumnDefinition Width="250"/>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
-                    <!-- Ряд для ID (автозаполнение) -->
                     <RowDefinition Height="Auto"/>
-                    <!-- Ряд для Наименования и Серийного номера -->
                     <RowDefinition Height="Auto"/>
-                    <!-- Ряд для Статуса и Категории -->
                     <RowDefinition Height="Auto"/>
-                    <!-- Ряд для Даты покупки -->
                     <RowDefinition Height="Auto"/>
-                    <!-- Ряд для Местоположения -->
                     <RowDefinition Height="Auto"/>
-                    <!-- Ряд для Изображения -->
                     <RowDefinition Height="Auto"/>
-                    <!-- Ряд для кнопки добавления -->
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
 
-                <!-- Ряд 0: ID оборудования (только для чтения) -->
+                <!-- ID оборудования (только для чтения) -->
                 <Label Grid.Row="0" Grid.Column="0" Content="ID оборудования:" Margin="5" VerticalAlignment="Center"/>
-                <TextBox x:Name="tbEquipmentId" Grid.Row="0" Grid.Column="1" Margin="5" IsReadOnly="True"/>
+                <TextBox Text="{Binding EquipmentId}" Grid.Row="0" Grid.Column="1" Margin="5" IsReadOnly="True"/>
 
-                <!-- Ряд 1: Наименование и Серийный номер -->
+                <!-- Наименование и Серийный номер -->
                 <Label Grid.Row="1" Grid.Column="0" Content="Наименование:" Margin="5" VerticalAlignment="Center"/>
-                <TextBox x:Name="tbEquipmentName" Grid.Row="1" Grid.Column="1" Margin="5"/>
+                <TextBox Text="{Binding EquipmentName, UpdateSourceTrigger=PropertyChanged}" Grid.Row="1" Grid.Column="1" Margin="5"/>
                 <Label Grid.Row="1" Grid.Column="2" Content="Серийный номер:" Margin="5" VerticalAlignment="Center"/>
-                <TextBox x:Name="tbSerialNumber" Grid.Row="1" Grid.Column="3" Margin="5"/>
+                <TextBox Text="{Binding SerialNumber, UpdateSourceTrigger=PropertyChanged}" Grid.Row="1" Grid.Column="3" Margin="5"/>
 
                 <!-- Ряд 2: Статус и Категория -->
                 <Label Grid.Row="2" Grid.Column="0" Content="Статус:" Margin="5" VerticalAlignment="Center"/>
-                <ComboBox x:Name="cbEquipmentStatus" Grid.Row="2" Grid.Column="1" Margin="5"/>
+                <ComboBox Grid.Row="2" Grid.Column="1" Margin="5"
+          ItemsSource="{Binding EquipmentStatuses}"
+          SelectedItem="{Binding SelectedStatus, Mode=TwoWay}" />
                 <Label Grid.Row="2" Grid.Column="2" Content="Категория:" Margin="5" VerticalAlignment="Center"/>
                 <ComboBox x:Name="cbEquipmentCategory" Grid.Row="2" Grid.Column="3" Margin="5" DisplayMemberPath="Name"/>
 
-                <!-- Ряд 3: Дата покупки -->
+                <!-- Дата покупки -->
                 <Label Grid.Row="3" Grid.Column="0" Content="Дата покупки:" Margin="5" VerticalAlignment="Center"/>
-                <DatePicker x:Name="dpPurchaseDate" Grid.Row="3" Grid.Column="1" Margin="5"/>
+                <DatePicker SelectedDate="{Binding PurchaseDate}" Grid.Row="3" Grid.Column="1" Margin="5"/>
 
-                <!-- Ряд 4: Местоположение (заменено на ComboBox) -->
+                <!-- Местоположение -->
                 <Label Grid.Row="4" Grid.Column="0" Content="Местоположение:" Margin="5" VerticalAlignment="Center"/>
-                <ComboBox x:Name="cbLocation" Grid.Row="4" Grid.Column="1" Margin="5"/>
+                <ComboBox ItemsSource="{Binding Locations}" SelectedItem="{Binding SelectedLocation}" Grid.Row="4" Grid.Column="1" Margin="5"/>
 
-                <!-- Ряд 5: Изображение оборудования -->
+                <!-- Изображение оборудования -->
                 <Label Grid.Row="5" Grid.Column="0" Content="Изображение:" Margin="5" VerticalAlignment="Center"/>
-                <Button x:Name="btnSelectImage" Grid.Row="5" Grid.Column="1" Content="Выбрать изображение" Margin="5" Click="btnSelectImage_Click"/>
+                <Button Content="Выбрать изображение" Command="{Binding SelectImageCommand}" Grid.Row="5" Grid.Column="1" Margin="5"/>
 
-                <!-- Ряд 6: Кнопка добавления оборудования -->
+                <!-- Кнопки добавления и удаления -->
                 <Grid Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="4" Margin="5">
                     <Grid.ColumnDefinitions>
-                        <!-- Первый столбец занимает оставшееся пространство -->
                         <ColumnDefinition Width="*" />
-                        <!-- Второй столбец для правой группы кнопок -->
                         <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
 
-                    <!-- Кнопка "Добавить оборудование", расположенная слева (или можно задать center) -->
-                    <Button Content="Добавить оборудование" Margin="5" HorizontalAlignment="Left" Click="btnAddEquipment_Click" Grid.Column="0"/>
+                    <Button Content="Добавить оборудование" Command="{Binding AddEquipmentCommand}" Margin="5" HorizontalAlignment="Left" Grid.Column="0"/>
 
-                    <!-- Контейнер для кнопок "Удалить" и "Изменить", выровненный по правому краю -->
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Grid.Column="1">
-                        <Button Content="Удалить оборудование" Margin="5" Click="btnDeleteEquipment_Click"/>
+                        <Button Content="Удалить оборудование" Command="{Binding DeleteEquipmentCommand}" Margin="5"/>
                     </StackPanel>
                 </Grid>
-
-
             </Grid>
-            
         </GroupBox>
-        
-        
-        <!-- 3. Группа для формирования отчёта по оборудованию -->
+
+        <!-- 3. Отчет по оборудованию -->
         <GroupBox Header="Отчет по оборудованию" Grid.Row="2" Margin="0,0,0,10">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10">
                 <Label Content="Начальная дата:" VerticalAlignment="Center"/>
-                <DatePicker x:Name="dpStartDate" Width="120" Margin="5,0,10,0"/>
+                <DatePicker SelectedDate="{Binding ReportStartDate}" Width="120" Margin="5,0,10,0"/>
                 <Label Content="Конечная дата:" VerticalAlignment="Center"/>
-                <DatePicker x:Name="dpEndDate" Width="120" Margin="5,0,10,0"/>
+                <DatePicker SelectedDate="{Binding ReportEndDate}" Width="120" Margin="5,0,10,0"/>
                 <Label Content="Категория:" VerticalAlignment="Center"/>
-                <ComboBox x:Name="cbCategoryFilter" Width="120" Margin="5,0,10,0" DisplayMemberPath="Name"/>
-                <Button x:Name="btnGenerateReport" Content="Сформировать отчет" Width="140" 
-                Click="btnGenerateReport_Click" Margin="0,0,10,0"/>
-                <Button x:Name="btnExportCsv" Content="Экспорт" Width="120" 
-                Click="btnExportCsv_Click"/>
+                <ComboBox ItemsSource="{Binding EquipmentCategories}" SelectedItem="{Binding SelectedReportCategory}" Width="120" Margin="5,0,10,0" DisplayMemberPath="Name"/>
+                <Button Content="Сформировать отчет" Command="{Binding GenerateReportCommand}" Width="140" Margin="0,0,10,0"/>
+                <Button Content="Экспорт" Command="{Binding ExportCommand}" Width="120"/>
             </StackPanel>
         </GroupBox>
-        
+
         <!-- 4. DataGrid для отображения списка оборудования -->
-        <DataGrid x:Name="ReportDataGrid" Grid.Row="3" AutoGenerateColumns="False">
+        <DataGrid ItemsSource="{Binding EquipmentReport}" Grid.Row="3" AutoGenerateColumns="False" IsReadOnly="True" SelectedItem="{Binding SelectedEquipment}">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="ID" Binding="{Binding Id}" Width="60"/>
                 <DataGridTextColumn Header="Наименование" Binding="{Binding Name}" Width="*"/>
